[FIX] Finals Overflow

--- a/pages/rankings/style.module.scss
+++ b/pages/rankings/style.module.scss
@@ -6,6 +6,11 @@
     width: 100%;
     height: 100%;
     padding: 2rem;
+    word-break: break-word;
+
+    @media (max-width: 768px) {
+        padding: 0.5rem;
+    }
 
     &_title {
         font-size: 2.5rem;
@@ -61,6 +66,10 @@
                     padding: 1rem 2rem;
 
                     justify-content: space-between;
+
+                    @media (max-width: 768px) {
+                        padding: 1rem;
+                    }
 
                     p {
                         margin: 0;
